idea/testData/checker/regression/ClassDeclarationAfterDot.fir.kt
class A

fun f() {
    A.<error descr="[EXPRESSION_EXPECTED] ">class</error><EOLError descr="Name expected"></EOLError>
}
